--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@clouden-cdk/aws-lambda-typescript",
-  "version": "0.0.1",
+  "version": "0.9.0",
+  "private": false,
   "description": "TypeScript Build Step for AWS CDK Lambda Functions",
   "main": "lib/typescript-code.js",
   "scripts": {
