--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "lib/typescript-code.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "tsc"
   },
   "keywords": [],
   "author": "",
